; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_index.c_ReindexIsProcessingIndex.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_index.c_ReindexIsProcessingIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@currentlyReindexedIndex = common dso_local global i64 0, align 8
@pendingReindexedIndexes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReindexIsProcessingIndex(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @currentlyReindexedIndex, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @pendingReindexedIndexes, align 4
  %8 = load i64, i64* %2, align 8
  %9 = call i64 @list_member_oid(i32 %7, i64 %8)
  %10 = icmp ne i64 %9, 0
  br label %11

11:                                               ; preds = %6, %1
  %12 = phi i1 [ true, %1 ], [ %10, %6 ]
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i64 @list_member_oid(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
